Add HotRestart modulepath test and fix the fail-fast approach which checks access to DirectByteBuffer cleaner methods.